--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "minmat",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Minimalistic material design svelte library",
-  "svelte": "src/index.js",
+  "svelte": "src/index.ts",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
+  "types": "./types/index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
@@ -25,18 +26,23 @@
   },
   "homepage": "https://github.com/pvharmo/minmat#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^1.0.13",
     "rollup": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sveld": "^0.8.3",
     "svelte": "^3.0.0",
     "svelte-check": "^2.2.4",
     "svelte-preprocess": "^4.7.4",
+    "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
   "files": [
     "src",
-    "dist"
+    "dist",
+    "types"
   ]
 }
