--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "minmat",
-  "version": "0.1.3",
-  "description": "Minimalistic material design svelte library",
-  "svelte": "src/index.ts",
-  "module": "dist/index.mjs",
-  "main": "dist/index.js",
-  "types": "./types/index.d.ts",
-  "scripts": {
-    "build": "rollup -c",
-    "prepublishOnly": "npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pvharmo/minmat.git"
-  },
-  "keywords": [
-    "material",
-    "svelte",
-    "components"
-  ],
-  "author": "Jonathan Caron-Roberge",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pvharmo/minmat/issues"
-  },
-  "homepage": "https://github.com/pvharmo/minmat#readme",
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@tsconfig/svelte": "^1.0.13",
-    "rollup": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sveld": "^0.8.3",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.2.4",
-    "svelte-preprocess": "^4.7.4",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
-  },
-  "files": [
-    "src",
-    "dist",
-    "types"
-  ]
+	"name": "minmat",
+	"version": "0.1.4",
+	"description": "Minimalistic material design svelte library",
+	"svelte": "src/index.ts",
+	"module": "dist/index.mjs",
+	"main": "dist/index.js",
+	"types": "./types/index.d.ts",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/pvharmo/minmat.git"
+	},
+	"type": "module",
+	"keywords": [
+		"material",
+		"svelte",
+		"components"
+	],
+	"author": "Jonathan Caron-Roberge",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/pvharmo/minmat/issues"
+	},
+	"homepage": "https://github.com/pvharmo/minmat#readme",
+	"devDependencies": {
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^4.19.0",
+		"@typescript-eslint/parser": "^4.19.0",
+		"eslint": "^7.22.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-svelte3": "^3.2.0",
+		"prettier": "~2.2.1",
+		"prettier-plugin-svelte": "^2.2.0",
+		"svelte": "^3.34.0",
+		"svelte-check": "^2.0.0",
+		"svelte-preprocess": "^4.0.0",
+		"tslib": "^2.0.0",
+		"typescript": "^4.0.0",
+		"svelte2tsx": "^0.4.5"
+	}
 }
